--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -1,3 +1,39 @@
+  GNU nano 8.2                                      .github/workflows/sbom.yml
+name: Generate SBOM
+
+on:
+  push:
+    branches:
+      - master
+  workflow_dispatch:
+
+jobs:
+  generate-sbom:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install CycloneDX generator
+        run: npm install -g @cyclonedx/bom
+
+      - name: Generate SBOM
+        run: cyclonedx-bom -o sbom.json
+
+      - name: Upload SBOM as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: juice-shop-sbom
+          path: sbom.json
 name: Generate SBOM
 
 on:
