--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -12,15 +12,15 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Install CycloneDX generator
         run: npm install -g @cyclonedx/bom
@@ -29,9 +29,7 @@ jobs:
         run: cyclonedx-bom -o sbom.json
 
       - name: Upload SBOM as artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: juice-shop-sbom
           path: sbom.json
-
-
