--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -22,11 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install CycloneDX generator
-        run: npm install -g @cyclonedx/bom
-
       - name: Generate SBOM
-        run: cyclonedx-bom -o sbom.json
+        run: npx @cyclonedx/bom -o sbom.json
 
       - name: Upload SBOM as artifact
         uses: actions/upload-artifact@v4
