--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   generate-sbom:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,15 +22,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install CycloneDX generator
-        run: npm install -g @cyclonedx/bom
+      - name: Install CycloneDX SBOM generator for NPM
+        run: npm install -g @cyclonedx/cyclonedx-npm
 
       - name: Generate SBOM
-        run: $(npm bin -g)/cyclonedx-bom -o sbom.json
+        run: cyclonedx-npm --output-format json --output-file sbom.json
 
       - name: Upload SBOM as artifact
         uses: actions/upload-artifact@v4
         with:
           name: juice-shop-sbom
           path: sbom.json
-
